Named all sections correctly, deleated all unnecessary files

--- a/src/html/components/home/hero.html
+++ b/src/html/components/home/hero.html
@@ -1,5 +1,5 @@
 <!--========HERO START========  -->
-<section class="hero_1 hero_1-decor">
+<section class="hero_1 hero-decor">
   <div class="container hero_1_1">
     <div class="hero_1_1_1">
       <h2 class="hero_1_1_1_1">Innovative Solutions for Growth</h2>
