--- a/src/html/components/home/price.html
+++ b/src/html/components/home/price.html
@@ -1,28 +1,29 @@
-<section class="pricing">
-  <div class="pricing__top pricing-decor">
+<!--========PRICE START========  -->
+<section class="price">
+  <div class="price__top pricing-decor">
     <div class="container">
-      <h2 class="pricing__title text-p-default">Pricing plans 🤑</h2>
-      <p class="pricing__desc heading-h1">
+      <h2 class="price__title text-p-default">Pricing plans 🤑</h2>
+      <p class="price__desc heading-h1">
         Choose a plan for a more advanced business
       </p>
     </div>
-    <label class="pricing__switcher-wrapper">
-      <span class="pricing__switcher">
+    <label class="price__switcher-wrapper">
+      <span class="price__switcher">
         <input
-          class="pricing__switcher-checkbox"
+          class="price__switcher-checkbox"
           type="checkbox"
           data-price="switcher"
         />
       </span>
-      <span class="pricing__switcher-text text-p-default">
+      <span class="price__switcher-text text-p-default">
         Annual pricing (save 20%)
       </span>
     </label>
   </div>
   <div class="container">
-    <ul class="pricing__plans">
-      <li class="pricing__item">
-        <div class="pricing__plans-icon">
+    <ul class="price__plans">
+      <li class="price__item">
+        <div class="price__plans-icon">
           <svg
             width="20"
             height="18"
@@ -39,52 +40,56 @@
             />
           </svg>
         </div>
-        <h3 class="pricing__plans-title text-p-large">Starter</h3>
-        <p class="pricing__plans-desc text-p-default">
+        <h3 class="price__plans-title text-p-large">Starter</h3>
+        <p class="price__plans-desc text-p-default">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
-        <div class="pricing__plans-price heading-h2">
+        <div class="price__plans-price heading-h2">
           <span data-price="starter"> $100 </span>
-          <span class="pricing__plans-price-text text-p-default" data-price="plan"
+          <span
+            class="price__plans-price-text text-p-default"
+            data-price="plan"
             >/year</span
           >
         </div>
-        <h4 class="pricing__plans-list-title text-p-default">What’s included:</h4>
-        <ul class="pricing__plans-list">
-          <li class="pricing__plans-item text-p-default">Unlimited Upload</li>
-          <li class="pricing__plans-item text-p-default">Advanced Statistic</li>
-          <li class="pricing__plans-item text-p-default">Profile Badge</li>
-          <li class="pricing__plans-item text-p-default">
+        <h4 class="price__plans-list-title text-p-default">
+          What’s included:
+        </h4>
+        <ul class="price__plans-list">
+          <li class="price__plans-item text-p-default">Unlimited Upload</li>
+          <li class="price__plans-item text-p-default">Advanced Statistic</li>
+          <li class="price__plans-item text-p-default">Profile Badge</li>
+          <li class="price__plans-item text-p-default">
             Access to the community
           </li>
           <li
-            class="pricing__plans-item pricing__plans-item--inaccess text-p-default"
+            class="price__plans-item price__plans-item--inaccess text-p-default"
           >
             History of all Liked Photos
           </li>
           <li
-            class="pricing__plans-item pricing__plans-item--inaccess text-p-default"
+            class="price__plans-item price__plans-item--inaccess text-p-default"
           >
             Directory Listing
           </li>
           <li
-            class="pricing__plans-item pricing__plans-item--inaccess text-p-default"
+            class="price__plans-item price__plans-item--inaccess text-p-default"
           >
             Customize Your Profile
           </li>
           <li
-            class="pricing__plans-item pricing__plans-item--inaccess text-p-default"
+            class="price__plans-item price__plans-item--inaccess text-p-default"
           >
             Display Your Workshops
           </li>
         </ul>
-        <div class="pricing__plans-btn-wrapper">
-          <button class="pricing__plans-btn text-p-default">Chose Plan</button>
+        <div class="price__plans-btn-wrapper">
+          <button class="price__plans-btn text-p-default">Chose Plan</button>
         </div>
       </li>
-      <li class="pricing__item pricing__item--popular">
-        <div class="pricing__plans-icon pricing__plans-icon--popular">
+      <li class="price__item price__item--popular">
+        <div class="price__plans-icon price__plans-icon--popular">
           <svg
             width="24"
             height="24"
@@ -101,66 +106,82 @@
             />
           </svg>
         </div>
-        <h3 class="pricing__plans-title pricing__plans-title--popular text-p-large">
+        <h3
+          class="price__plans-title price__plans-title--popular text-p-large"
+        >
           Popular
         </h3>
-        <p class="pricing__plans-desc text-p-default">
+        <p class="price__plans-desc text-p-default">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
-        <div class="pricing__plans-price pricing__plans-price--popular heading-h2">
+        <div
+          class="price__plans-price price__plans-price--popular heading-h2"
+        >
           <span data-price="popular"> $1400 </span>
-          <span class="pricing__plans-price-text text-p-default" data-price="plan"
+          <span
+            class="price__plans-price-text text-p-default"
+            data-price="plan"
             >/year</span
           >
         </div>
         <h4
-          class="pricing__plans-list-title pricing__plans-list-title--popular text-p-default"
+          class="price__plans-list-title price__plans-list-title--popular text-p-default"
         >
           What’s included:
         </h4>
-        <ul class="pricing__plans-list">
-          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
+        <ul class="price__plans-list">
+          <li
+            class="price__plans-item price__plans-item--popular text-p-default"
+          >
             Unlimited Upload
           </li>
-          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
+          <li
+            class="price__plans-item price__plans-item--popular text-p-default"
+          >
             Advanced Statistic
           </li>
-          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
+          <li
+            class="price__plans-item price__plans-item--popular text-p-default"
+          >
             Profile Badge
           </li>
-          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
+          <li
+            class="price__plans-item price__plans-item--popular text-p-default"
+          >
             Access to the community
           </li>
           <li
-            class="pricing__plans-item pricing__plans-item--popular pricing__plans-item--inaccess text-p-default"
+            class="price__plans-item price__plans-item--popular price__plans-item--inaccess text-p-default"
           >
             History of all Liked Photos
           </li>
-          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
+          <li
+            class="price__plans-item price__plans-item--popular text-p-default"
+          >
             Directory Listing
           </li>
           <li
-            class="pricing__plans-item pricing__plans-item--popular pricing__plans-item--inaccess text-p-default"
+            class="price__plans-item price__plans-item--popular price__plans-item--inaccess text-p-default"
           >
             Customize Your Profile
           </li>
           <li
-            class="pricing__plans-item pricing__plans-item--popular pricing__plans-item--inaccess text-p-default"
+            class="price__plans-item price__plans-item--popular price__plans-item--inaccess text-p-default"
           >
             Display Your Workshops
           </li>
         </ul>
-        <div class="pricing__plans-btn-wrapper">
+        <div class="price__plans-btn-wrapper">
           <button
-            class="pricing__plans-btn pricing__plans-btn--popular text-p-default"
+            class="price__plans-btn price__plans-btn--popular text-p-default"
           >
             Chose Plan
           </button>
         </div>
       </li>
-      <li class="pricing__item">
-        <div class="pricing__plans-icon">
+      <li class="price__item">
+        <div class="price__plans-icon">
           <svg
             width="22"
             height="20"
@@ -184,40 +205,45 @@
             />
           </svg>
         </div>
-        <h3 class="pricing__plans-title text-p-large">Enterprise</h3>
-        <p class="pricing__plans-desc text-p-default">
+        <h3 class="price__plans-title text-p-large">Enterprise</h3>
+        <p class="price__plans-desc text-p-default">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
-        <div class="pricing__plans-price heading-h2">
+        <div class="price__plans-price heading-h2">
           <span data-price="enterprice"> $2100 </span>
-          <span class="pricing__plans-price-text text-p-default" data-price="plan"
+          <span
+            class="price__plans-price-text text-p-default"
+            data-price="plan"
             >/year</span
           >
         </div>
-        <h4 class="pricing__plans-list-title text-p-default">What’s included:</h4>
-        <ul class="pricing__plans-list">
-          <li class="pricing__plans-item text-p-default">Unlimited Upload</li>
-          <li class="pricing__plans-item text-p-default">Advanced Statistic</li>
-          <li class="pricing__plans-item text-p-default">Profile Badge</li>
-          <li class="pricing__plans-item text-p-default">
+        <h4 class="price__plans-list-title text-p-default">
+          What’s included:
+        </h4>
+        <ul class="price__plans-list">
+          <li class="price__plans-item text-p-default">Unlimited Upload</li>
+          <li class="price__plans-item text-p-default">Advanced Statistic</li>
+          <li class="price__plans-item text-p-default">Profile Badge</li>
+          <li class="price__plans-item text-p-default">
             Access to the community
           </li>
-          <li class="pricing__plans-item text-p-default">
+          <li class="price__plans-item text-p-default">
             History of all Liked Photos
           </li>
-          <li class="pricing__plans-item text-p-default">Directory Listing</li>
-          <li class="pricing__plans-item text-p-default">
+          <li class="price__plans-item text-p-default">Directory Listing</li>
+          <li class="price__plans-item text-p-default">
             Customize Your Profile
           </li>
-          <li class="pricing__plans-item text-p-default">
+          <li class="price__plans-item text-p-default">
             Display Your Workshops
           </li>
         </ul>
-        <div class="pricing__plans-btn-wrapper">
-          <button class="pricing__plans-btn text-p-default">Chose Plan</button>
+        <div class="price__plans-btn-wrapper">
+          <button class="price__plans-btn text-p-default">Chose Plan</button>
         </div>
       </li>
     </ul>
   </div>
 </section>
+<!--========PRICE END========  -->
