--- a/src/html/components/home/reviews.html
+++ b/src/html/components/home/reviews.html
@@ -1,19 +1,20 @@
-<section class="testimonials">
+<!--========REVIEWS START========  -->
+<section class="reviews">
   <div class="container">
-    <div class="testimonials__head">
-      <h2 class="testimonials__title heading-h2">
+    <div class="reviews__head">
+      <h2 class="reviews__title heading-h2">
         What our customer are saying
       </h2>
-      <p class="testimonials__desc text-p-medium">
+      <p class="reviews__desc text-p-medium">
         We are trusted numerous companies from different business to meet their
         needs
       </p>
     </div>
-    <div class="testimonials__slider-wrapper">
-      <div class="swiper testimonials__slider">
-        <div class="swiper-wrapper testimonials__comments">
-          <div class="swiper-slide testimonials__comment">
-            <div class="testimonials__rating">
+    <div class="reviews__slider-wrapper">
+      <div class="swiper reviews__slider">
+        <div class="swiper-wrapper reviews__comments">
+          <div class="swiper-slide reviews__comment">
+            <div class="reviews__rating">
               <img
                 loading="lazy"
                 width="232"
@@ -21,36 +22,36 @@
                 src="./assets/icons/rating-icon.svg"
                 alt="Five stars"
               />
-              <span class="testimonials__rating-num text-p-default"> 5.0 </span>
+              <span class="reviews__rating-num text-p-default"> 5.0 </span>
             </div>
-            <p class="testimonials__comment-text heading-h3">
+            <p class="reviews__comment-text heading-h3">
               “With Agency the results are very satisfying. Wrapped with high
               quality and innovative design that makes a surge of visitors on my
               website.”
             </p>
-            <address class="testimonials__comment-author">
+            <address class="reviews__comment-author">
               <img
                 loading="lazy"
-                class="testimonials__comment-author-avatar"
+                class="reviews__comment-author-avatar"
                 src="./assets/image/comment-author-1.png"
                 width="56"
                 height="56"
                 alt="Renee Wells"
               />
-              <div class="testimonials__comment-author-info">
-                <p class="testimonials__comments-author-name text-p-medium">
+              <div class="reviews__comment-author-info">
+                <p class="reviews__comments-author-name text-p-medium">
                   Renee Wells
                 </p>
                 <p
-                  class="testimonials__comments-author-profession text-p-default"
+                  class="reviews__comments-author-profession text-p-default"
                 >
                   Product Designer, Quotient
                 </p>
               </div>
             </address>
           </div>
-          <div class="swiper-slide testimonials__comment">
-            <div class="testimonials__rating">
+          <div class="swiper-slide reviews__comment">
+            <div class="reviews__rating">
               <img
                 loading="lazy"
                 width="232"
@@ -58,36 +59,36 @@
                 src="./assets/icons/rating-icon.svg"
                 alt="Five stars"
               />
-              <span class="testimonials__rating-num text-p-default"> 5.0 </span>
+              <span class="reviews__rating-num text-p-default"> 5.0 </span>
             </div>
-            <p class="testimonials__comment-text heading-h3">
+            <p class="reviews__comment-text heading-h3">
               “The service exceeded my expectations. The team delivered
               top-notch quality with great attention to detail, resulting in a
               significant increase in engagement.”
             </p>
-            <address class="testimonials__comment-author">
+            <address class="reviews__comment-author">
               <img
                 loading="lazy"
-                class="testimonials__comment-author-avatar"
+                class="reviews__comment-author-avatar"
                 src="./assets/image/comment-author-2.jpg"
                 width="56"
                 height="56"
                 alt="John Smith"
               />
-              <div class="testimonials__comment-author-info">
-                <p class="testimonials__comments-author-name text-p-medium">
+              <div class="reviews__comment-author-info">
+                <p class="reviews__comments-author-name text-p-medium">
                   John Smith
                 </p>
                 <p
-                  class="testimonials__comments-author-profession text-p-default"
+                  class="reviews__comments-author-profession text-p-default"
                 >
                   Marketing Specialist, WebWorks
                 </p>
               </div>
             </address>
           </div>
-          <div class="swiper-slide testimonials__comment">
-            <div class="testimonials__rating">
+          <div class="swiper-slide reviews__comment">
+            <div class="reviews__rating">
               <img
                 loading="lazy"
                 width="232"
@@ -95,28 +96,28 @@
                 src="./assets/icons/rating-icon.svg"
                 alt="Five stars"
               />
-              <span class="testimonials__rating-num text-p-default"> 5.0 </span>
+              <span class="reviews__rating-num text-p-default"> 5.0 </span>
             </div>
-            <p class="testimonials__comment-text heading-h3">
+            <p class="reviews__comment-text heading-h3">
               “Working with this agency has been a game-changer. The results
               were incredible, and they took the time to understand our vision.
               Highly recommend!”
             </p>
-            <address class="testimonials__comment-author">
+            <address class="reviews__comment-author">
               <img
                 loading="lazy"
-                class="testimonials__comment-author-avatar"
+                class="reviews__comment-author-avatar"
                 src="./assets/image/comment-author-3.jpeg"
                 width="56"
                 height="56"
                 alt="Maria Ivanova"
               />
-              <div class="testimonials__comment-author-info">
-                <p class="testimonials__comments-author-name text-p-medium">
+              <div class="reviews__comment-author-info">
+                <p class="reviews__comments-author-name text-p-medium">
                   Maria Smith
                 </p>
                 <p
-                  class="testimonials__comments-author-profession text-p-default"
+                  class="reviews__comments-author-profession text-p-default"
                 >
                   UX/UI Designer, Creative Agency
                 </p>
@@ -125,8 +126,8 @@
           </div>
         </div>
       </div>
-      <div class="testimonials__btns">
-        <div class="testimonials__btn testimonials__btn--prev">
+      <div class="reviews__btns">
+        <div class="reviews__btn reviews__btn--prev">
           <svg
             width="16"
             height="14"
@@ -142,7 +143,7 @@
             />
           </svg>
         </div>
-        <div class="testimonials__btn testimonials__btn--next">
+        <div class="reviews__btn reviews__btn--next">
           <svg
             width="16"
             height="14"
@@ -162,3 +163,4 @@
     </div>
   </div>
 </section>
+<!--========REVIEWS END========  -->
