--- a/src/html/components/home/team.html
+++ b/src/html/components/home/team.html
@@ -1,3 +1,4 @@
+<!--========TEAM START========  -->
 <section class="team">
   <div class="container">
     <h2 class="team__title heading-h2">
@@ -562,3 +563,4 @@
     </div>
   </div>
 </section>
+<!--========TEAM END========  -->
