--- a/src/scss/components/home/benefits.scss
+++ b/src/scss/components/home/benefits.scss
@@ -1,4 +1,5 @@
-.insights {
+// <!--========BENEFITS START========  -->
+.benefits {
   padding: 120px 0;
   background-color: var(--black-bg-color);
 
@@ -83,3 +84,5 @@
     }
   }
 }
+
+// <!--========BENEFITS END========  -->
