--- a/src/scss/components/home/contact.scss
+++ b/src/scss/components/home/contact.scss
@@ -1,4 +1,5 @@
-.get-started {
+// <!--========CONTACT START========  -->
+.contact {
   padding: 76px 0 160px;
 
   @include mobile {
@@ -142,3 +143,5 @@
     }
   }
 }
+
+// <!--========CONTACT END========  -->
