--- a/src/scss/components/home/service.scss
+++ b/src/scss/components/home/service.scss
@@ -1,4 +1,5 @@
-.overview {
+// <!--========SERVICE START========  -->
+.service {
   padding: 100px 0;
   background-color: var(--black-bg-color);
 
@@ -84,3 +85,5 @@
     }
   }
 }
+/* stylelint-disable-next-line scss/double-slash-comment-empty-line-before */
+// <!--========SERVICE END========  -->
