--- a/src/scss/components/home/team.scss
+++ b/src/scss/components/home/team.scss
@@ -1,3 +1,5 @@
+// <!--========TEAM START========  -->
+
 .team {
   padding: 80px 0 165px;
 
@@ -201,3 +203,5 @@
     }
   }
 }
+/* stylelint-disable-next-line scss/double-slash-comment-empty-line-before */
+// <!--========TEAM START========  -->
