--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,12 +6,12 @@
 
 @import './components/header';
 @import './components/home/hero';
+@import './components/home/about';
+@import './components/home/service';
+@import './components/home/team';
+@import './components/home/reviews';
 @import './components/home/features';
-@import './components/home/overview';
-@import './components/collaborate/team';
-@import './components/home/testimonials';
-@import './components/home/strenght';
-@import './components/pricing/hero';
-@import './components/blog/insights';
-@import './components/contact/getSarted';
+@import './components/home/price';
+@import './components/home/benefits';
+@import './components/home/contact';
 @import './components/footer';
