--- a/src/html/components/home/benefits.html
+++ b/src/html/components/home/benefits.html
@@ -1,63 +1,64 @@
-<section class="insights">
+<!--========BENEFITS START========  -->
+<section class="benefits">
   <div class="container">
-    <ul class="insights__list">
-      <li class="insights__item">
+    <ul class="benefits__list">
+      <li class="benefits__item">
         <img
           loading="lazy"
           src="./assets/image/blog/table-with-tablet-img.jpg"
           alt="tablet with tablet"
         />
-        <h3 class="insights__item-title heading-h3">
+        <h3 class="benefits__item-title heading-h3">
           How we perform long-running tasks using AWS services
         </h3>
-        <p class="insights__item-text text-p-medium">
+        <p class="benefits__item-text text-p-medium">
           Webflow is web design tool as well as a hosting platform and CMS all
           in one. While you are probably familiar with all of these, they are
           usually entirely separate tools.
         </p>
       </li>
-      <li class="insights__item">
+      <li class="benefits__item">
         <img
           loading="lazy"
           src="./assets/image/blog/office-img.jpg"
           alt="three men talking in the office"
         />
         <h3
-          class="insights__item-title insights__item-title--underlined heading-h3"
+          class="benefits__item-title benefits__item-title--underlined heading-h3"
         >
           How to ask when doing User Research
         </h3>
-        <p class="insights__item-text text-p-medium">
+        <p class="benefits__item-text text-p-medium">
           Bro, the story is that you want to make an application for buying and
           selling goods on the market. During user research, what do you think
           you will ask people?
         </p>
       </li>
-      <li class="insights__item">
+      <li class="benefits__item">
         <img
           loading="lazy"
           src="./assets/image/blog/man-working-at-the-table.jpg"
           alt="man working at a table with charts"
         />
-        <h3 class="insights__item-title heading-h3">
+        <h3 class="benefits__item-title heading-h3">
           Layout Exploration — Simple exercise but big effect
         </h3>
-        <p class="insights__item-text text-p-medium">
+        <p class="benefits__item-text text-p-medium">
           Make alternatives or other options for the design we are making. For
           example, we are creating a website design. Then there is the
           testimonial section.
         </p>
       </li>
-      <li class="insights__item">
+      <li class="benefits__item">
         <img
           loading="lazy"
           src="./assets/image/blog/conference-img.jpg"
           alt="conference man speaking"
         />
-        <h3 class="insights__item-title heading-h3">
+        <h3 class="benefits__item-title heading-h3">
           Webflow Break the Coding Barrier
         </h3>
-        <p class="insights__item-text text-p-medium">
+        <p class="benefits__item-text text-p-medium">
           Webflow is web design tool as well as a hosting platform and CMS all
           in one. While you are probably familiar with all of these, they are
           usually entirely separate tools.
@@ -66,3 +67,4 @@
     </ul>
   </div>
 </section>
+<!--========BENEFITS END========  -->
