--- a/src/html/components/home/service.html
+++ b/src/html/components/home/service.html
@@ -1,77 +1,78 @@
-<section class="overview">
-  <div class="container overview__container">
-    <h2 class="overview__title heading-h2">
+<!--========SERVICE START========  -->
+<section class="service">
+  <div class="container service__container">
+    <h2 class="service__title heading-h2">
       Coca help our client solve complex customer problems with date that does
       more.
     </h2>
-    <p class="overview__desc text-p-medium">
+    <p class="service__desc text-p-medium">
       Our platform offers the modern enterprise full control of how date can be
       access and used with industry leading software solutions for identity,
       activation, and date collaboration
     </p>
-    <ul class="overview__list">
-      <li class="overview__item">
+    <ul class="service__list">
+      <li class="service__item">
         <img
           loading="lazy"
-          class="overview__item-icon"
+          class="service__item-icon"
           src="./assets/icons/calendar-iconsvg.svg"
           width="40"
           height="40"
           alt="Calendar icon"
         />
-        <h3 class="overview__item-title heading-h5">
+        <h3 class="service__item-title heading-h5">
           Build your date fundamental
         </h3>
-        <p class="overview__item-desc text-p-default">
+        <p class="service__item-desc text-p-default">
           Build access to date, develop valuable business insights and drive
           revenue while maintaining full control over access and use of date at
           all times.
         </p>
       </li>
-      <li class="overview__item">
+      <li class="service__item">
         <img
           loading="lazy"
-          class="overview__item-icon"
+          class="service__item-icon"
           src="./assets/icons/todo-icon.svg"
           width="40"
           height="40"
           alt="Todo icon"
         />
-        <h3 class="overview__item-title heading-h5">Measure more effective</h3>
-        <p class="overview__item-desc text-p-default">
+        <h3 class="service__item-title heading-h5">Measure more effective</h3>
+        <p class="service__item-desc text-p-default">
           Effectively measure people-based campaigns with the freedom to choose
           from best-of breed partners to optimize and drive media innovation.
         </p>
       </li>
-      <li class="overview__item">
+      <li class="service__item">
         <img
           loading="lazy"
-          class="overview__item-icon"
+          class="service__item-icon"
           src="./assets/icons/list-icon.svg"
           width="40"
           height="40"
           alt="List icon"
         />
-        <h3 class="overview__item-title heading-h5">Activate your date</h3>
-        <p class="overview__item-desc text-p-default">
+        <h3 class="service__item-title heading-h5">Activate your date</h3>
+        <p class="service__item-desc text-p-default">
           Accurately address your specific audiences at scale across any
           channel, platform, publisher or network and safely translate date
           between identity space to improve results.
         </p>
       </li>
-      <li class="overview__item">
+      <li class="service__item">
         <img
           loading="lazy"
-          class="overview__item-icon"
+          class="service__item-icon"
           src="./assets/icons/shield-icon.svg"
           width="40"
           height="40"
           alt="Shield icon"
         />
-        <h3 class="overview__item-title heading-h5">
+        <h3 class="service__item-title heading-h5">
           Strengthen consumer privacy
         </h3>
-        <p class="overview__item-desc text-p-default">
+        <p class="service__item-desc text-p-default">
           Protect your customer date with leading privacy-preserving
           technologies and advanced techniques to minimize date movement while
           still enabling insight generation.
@@ -80,3 +81,4 @@
     </ul>
   </div>
 </section>
+<!--========SERVICE END========  -->
