--- a/src/scss/components/home/features.scss
+++ b/src/scss/components/home/features.scss
@@ -1,201 +1,139 @@
+// <!--========FEATURES START========  -->
 .features {
-  padding: 160px 0 94px;
-
-  @include mobile {
-    padding: 60px 0 64px;
-  }
-
   &__container {
-    @include flex-all-between;
-    gap: 58px;
-
-    @include mini-desktop {
-      gap: 40px;
-      flex-direction: column;
-      align-items: flex-start;
-    }
+    border-bottom: 1px solid var(--neutral-color-30);
+    padding-top: 66px;
+    padding-bottom: 166px;
 
     @include mobile {
-      gap: 30px;
+      padding-top: 26px;
+      padding-bottom: 70px;
     }
   }
 
-  &__left {
-    position: relative;
-  }
+  &__list {
+    @include flex-align-center;
 
-  &__stats {
-    position: absolute;
-    right: 36px;
-    bottom: 40px;
-    padding: 18px;
-    max-width: 290px;
-    background-color: #fff;
+    @include tablet {
+      gap: 62px;
+      flex-wrap: wrap;
+      justify-content: center;
+      text-align: center;
+    }
+
+    @include small-tablet {
+      gap: 45px;
+    }
 
     @include mobile {
-      right: 16px;
-      bottom: 20px;
+      gap: 35px;
+    }
+  }
+
+  &__item {
+    @include tablet {
+      justify-content: center;
+      min-width: 325px;
     }
 
-    @include small-mobile {
-      right: 12px;
-      bottom: 12px;
-      padding: 14px;
-      max-width: 240px;
+    @include mobile {
+      min-width: 240px;
     }
 
-    &-head {
-      @include flex-all-between;
-      margin-bottom: 19px;
-
-      @include small-mobile {
-        margin-bottom: 10px;
-      }
-    }
-
-    &-title {
-      font-weight: 600;
-      line-height: 1.5;
-      color: #1d1e25;
-    }
-
-    &-item {
+    &:not(:last-child) {
       @include flex-align-center;
-      gap: 26px;
+      padding-right: 72px;
 
-      &:not(:last-child) {
-        border-bottom: 0.73px solid #ededed;
-        padding-bottom: 23px;
+      @include tablet {
+        padding-right: 0;
       }
 
-      &:last-child {
-        padding-top: 23px;
-      }
+      &::after {
+        content: '';
+        display: inline-block;
+        width: 1px;
+        height: 99px;
+        background-color: var(--neutral-color-40);
 
-      @include small-mobile {
-        gap: 16px;
-      }
-
-      &-img {
-        @include small-mobile {
-          width: 65px;
-        }
-      }
-
-      &-title {
-        margin-bottom: 6px;
-        font-weight: 500;
-        font-size: 10px;
-        line-height: 1.5;
-        color: #7e8492;
-      }
-
-      &-price {
-        @include flex-align-center;
-        gap: 12px;
-
-        &-num {
-          font-weight: 700;
-          font-size: 23px;
-          line-height: 1.2;
-          color: #1d1e25;
-
-          @include mobile {
-            font-size: 18px;
-          }
-        }
-
-        &-proc {
-          @include flex-align-center;
-          gap: 5px;
-          font-weight: 500;
-          font-size: 10px;
-          line-height: 1.5;
-          color: #1d1e25;
-        }
-      }
-
-      &-desc {
-        margin-top: 9px;
-        font-weight: 400;
-        font-size: 8px;
-        color: var(--neutral-color-150);
-
-        & span {
-          font-weight: 700;
+        @include tablet {
+          display: none;
         }
       }
     }
-  }
 
-  &__desc {
-    max-width: 557px;
-
-    @include mini-desktop {
-      width: 100%;
-      max-width: 992px;
-    }
-
-    &-title {
-      margin-bottom: 24px;
+    &-num {
+      display: block;
+      margin-bottom: 8px;
       font-weight: 600;
-      font-size: 56px;
+      font-size: 64px;
       line-height: 1.2;
-      letter-spacing: -0.04em;
       color: var(--neutral-color-100);
 
-      @include mobile {
-        margin-bottom: 10px;
+      @include tablet {
+        font-size: 58px;
       }
 
-      &-text {
-        margin-bottom: 40px;
-        max-width: 360px;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 1.7;
-        color: #7e8492;
+      @include mobile {
+        font-size: 48px;
+      }
 
-        @include mini-desktop {
-          width: 100%;
-          max-width: 700px;
-        }
-
-        @include mobile {
-          margin-bottom: 25px;
-        }
+      @include small-mobile {
+        font-size: 42px;
       }
     }
 
-    &-item {
-      @include flex-align-center;
-      gap: 16px;
-      max-width: 393px;
+    &-text {
       font-weight: 500;
       font-size: 18px;
       line-height: 1.78;
-      color: var(--neutral-color-100);
+      color: var(--neutral-color-150);
+    }
+  }
 
-      @include mini-desktop {
-        max-width: 600px;
-      }
+  &__list,
+  &__img {
+    margin-bottom: 80px;
 
-      &:not(:last-child) {
-        margin-bottom: 32px;
+    @include mobile {
+      margin-bottom: 45px;
+    }
+  }
 
-        @include mobile {
-          margin-bottom: 20px;
-        }
-      }
+  &__img {
+    @include tablet {
+      margin-bottom: 55px;
+    }
 
-      &::before {
-        content: '';
-        display: inline-block;
-        padding-right: 20px;
-        width: 20px;
-        height: 20px;
-        background: url('../assets/icons/features-tick-icon.svg');
-      }
+    @include mobile {
+      margin-bottom: 45px;
+    }
+  }
+
+  &__info {
+    @include flex-justify-between;
+
+    @include tablet {
+      gap: 25px;
+      flex-direction: column;
+    }
+  }
+
+  &__title {
+    font-weight: 600;
+    letter-spacing: -0.04em;
+    color: var(--neutral-color-100);
+  }
+
+  &__desc {
+    max-width: 421px;
+    font-weight: 500;
+    line-height: 1.78;
+    color: var(--neutral-color-150);
+
+    @include tablet {
+      max-width: 700px;
     }
   }
 }
+/* stylelint-disable-next-line scss/double-slash-comment-empty-line-before */
+// <!--========FEATURES END========  -->
