--- a/src/scss/components/home/price.scss
+++ b/src/scss/components/home/price.scss
@@ -1,4 +1,5 @@
-.pricing {
+// <!--========PRICE START========  -->
+.price {
   padding: 90px 0 78px;
 
   @include mobile {
@@ -316,3 +317,5 @@
     }
   }
 }
+
+// <!--========PRICE END========  -->
