--- a/src/scss/components/home/about.scss
+++ b/src/scss/components/home/about.scss
@@ -1,12 +1,13 @@
 // <!--========ABOUT START========  -->
-.about {
+/* stylelint-disable-next-line selector-class-pattern */
+.about_1 {
   padding: 160px 0 94px;
 
   @include mobile {
     padding: 60px 0 64px;
   }
 
-  &__container {
+  &_1 {
     @include flex-all-between;
     gap: 58px;
 
@@ -21,115 +22,7 @@
     }
   }
 
-  &__left {
-    position: relative;
-  }
-
-  &__stats {
-    position: absolute;
-    right: 36px;
-    bottom: 40px;
-    padding: 18px;
-    max-width: 290px;
-    background-color: #fff;
-
-    @include mobile {
-      right: 16px;
-      bottom: 20px;
-    }
-
-    @include small-mobile {
-      right: 12px;
-      bottom: 12px;
-      padding: 14px;
-      max-width: 240px;
-    }
-
-    &-head {
-      @include flex-all-between;
-      margin-bottom: 19px;
-
-      @include small-mobile {
-        margin-bottom: 10px;
-      }
-    }
-
-    &-title {
-      font-weight: 600;
-      line-height: 1.5;
-      color: #1d1e25;
-    }
-
-    &-item {
-      @include flex-align-center;
-      gap: 26px;
-
-      &:not(:last-child) {
-        border-bottom: 0.73px solid #ededed;
-        padding-bottom: 23px;
-      }
-
-      &:last-child {
-        padding-top: 23px;
-      }
-
-      @include small-mobile {
-        gap: 16px;
-      }
-
-      &-img {
-        @include small-mobile {
-          width: 65px;
-        }
-      }
-
-      &-title {
-        margin-bottom: 6px;
-        font-weight: 500;
-        font-size: 10px;
-        line-height: 1.5;
-        color: #7e8492;
-      }
-
-      &-price {
-        @include flex-align-center;
-        gap: 12px;
-
-        &-num {
-          font-weight: 700;
-          font-size: 23px;
-          line-height: 1.2;
-          color: #1d1e25;
-
-          @include mobile {
-            font-size: 18px;
-          }
-        }
-
-        &-proc {
-          @include flex-align-center;
-          gap: 5px;
-          font-weight: 500;
-          font-size: 10px;
-          line-height: 1.5;
-          color: #1d1e25;
-        }
-      }
-
-      &-desc {
-        margin-top: 9px;
-        font-weight: 400;
-        font-size: 8px;
-        color: var(--neutral-color-150);
-
-        & span {
-          font-weight: 700;
-        }
-      }
-    }
-  }
-
-  &__desc {
+  &_1_1 {
     max-width: 557px;
 
     @include mini-desktop {
@@ -137,7 +30,7 @@
       max-width: 992px;
     }
 
-    &-title {
+    &_1 {
       margin-bottom: 24px;
       font-weight: 600;
       font-size: 56px;
@@ -149,7 +42,7 @@
         margin-bottom: 10px;
       }
 
-      &-text {
+      &_1 {
         margin-bottom: 40px;
         max-width: 360px;
         font-weight: 500;
@@ -168,7 +61,7 @@
       }
     }
 
-    &-item {
+    &_1_1_1 {
       @include flex-align-center;
       gap: 16px;
       max-width: 393px;
