Finished service section naming with _1

--- a/src/html/components/home/service.html
+++ b/src/html/components/home/service.html
@@ -1,78 +1,84 @@
 <!--========SERVICE START========  -->
-<section class="service">
-  <div class="container service__container">
-    <h2 class="service__title heading-h2">
+<section class="service_1">
+  <div class="container">
+    <h2 class="service_1_1 heading-h2" id="service_1_1_text">
       Coca help our client solve complex customer problems with date that does
       more.
     </h2>
-    <p class="service__desc text-p-medium">
+    <p class="service_1_1_1 text-p-medium" id="service_1_1_1_text">
       Our platform offers the modern enterprise full control of how date can be
       access and used with industry leading software solutions for identity,
       activation, and date collaboration
     </p>
-    <ul class="service__list">
-      <li class="service__item">
+    <ul class="service_1_1_1_1">
+      <li class="service_1_1_1_1_1">
         <img
           loading="lazy"
-          class="service__item-icon"
+          class="service_1_1_1_1_1_1"
           src="./assets/icons/calendar-iconsvg.svg"
           width="40"
           height="40"
           alt="Calendar icon"
         />
-        <h3 class="service__item-title heading-h5">
+        <h3
+          class="service_1_1_1_1_1_1_1 heading-h5"
+          id="service_1_1_1_1_1_1_1_text"
+        >
           Build your date fundamental
         </h3>
-        <p class="service__item-desc text-p-default">
+        <p
+          class="service_1_1_1_1_1_1_1_1 text-p-default"
+          id="service_1_1_1_1_1_1_1_1_text"
+        >
           Build access to date, develop valuable business insights and drive
           revenue while maintaining full control over access and use of date at
           all times.
         </p>
       </li>
-      <li class="service__item">
+      <li class="service_1_1_1_1_1">
         <img
           loading="lazy"
-          class="service__item-icon"
+          class="service_1_1_1_1_1_1"
           src="./assets/icons/todo-icon.svg"
           width="40"
           height="40"
           alt="Todo icon"
         />
-        <h3 class="service__item-title heading-h5">Measure more effective</h3>
-        <p class="service__item-desc text-p-default">
+        <h3 class="service_1_1_1_1_1_1_1 heading-h5" id="service_1_1_1_1_1_1_1_1_text">Measure more effective</h3>
+        <p class="service_1_1_1_1_1_1_1_1 text-p-default" id="service_1_1_1_1_1_1_1_1_1_text">
           Effectively measure people-based campaigns with the freedom to choose
           from best-of breed partners to optimize and drive media innovation.
         </p>
       </li>
-      <li class="service__item">
+      <li class="service_1_1_1_1_1">
         <img
           loading="lazy"
-          class="service__item-icon"
+          class="service_1_1_1_1_1_1"
           src="./assets/icons/list-icon.svg"
           width="40"
           height="40"
           alt="List icon"
         />
-        <h3 class="service__item-title heading-h5">Activate your date</h3>
-        <p class="service__item-desc text-p-default">
+        <h3 class="service_1_1_1_1_1_1_1 heading-h5" id="service_1_1_1_1_1_1_1_1_1_text">Activate your date</h3>
+        <p class="service_1_1_1_1_1_1_1_1 text-p-default" id="service_1_1_1_1_1_1_1_1_1_1_text">
           Accurately address your specific audiences at scale across any
           channel, platform, publisher or network and safely translate date
           between identity space to improve results.
         </p>
       </li>
-      <li class="service__item">
+      <li class="service_1_1_1_1_1">
         <img
           loading="lazy"
-          class="service__item-icon"
+          class="service_1_1_1_1_1_1"
           src="./assets/icons/shield-icon.svg"
           width="40"
           height="40"
           alt="Shield icon"
         />
-        <h3 class="service__item-title heading-h5">
+        <h3 class="service_1_1_1_1_1_1_1 heading-h5" id="service_1_1_1_1_1_1_1_1_1_1_text">
           Strengthen consumer privacy
         </h3>
-        <p class="service__item-desc text-p-default">
+        <p class="service_1_1_1_1_1_1_1_1 text-p-default" id="service_1_1_1_1_1_1_1_1_1_1_1_text">
           Protect your customer date with leading privacy-preserving
           technologies and advanced techniques to minimize date movement while
           still enabling insight generation.
