--- a/src/scss/components/home/service.scss
+++ b/src/scss/components/home/service.scss
@@ -1,5 +1,6 @@
 // <!--========SERVICE START========  -->
-.service {
+/* stylelint-disable-next-line selector-class-pattern */
+.service_1 {
   padding: 100px 0;
   background-color: var(--black-bg-color);
 
@@ -11,7 +12,7 @@
     text-align: center;
   }
 
-  &__title {
+  &_1 {
     margin-bottom: 24px;
     max-width: 816px;
     font-weight: 600;
@@ -20,7 +21,7 @@
     color: #fff;
   }
 
-  &__desc {
+  &_1_1 {
     margin-bottom: 80px;
     max-width: 660px;
     font-weight: 500;
@@ -32,7 +33,7 @@
     }
   }
 
-  &__list {
+  &_1_1_1 {
     @include flex-all-between;
     gap: 56px;
     flex-wrap: wrap;
@@ -44,11 +45,11 @@
     }
   }
 
-  &__item {
+  &_1_1_1_1 {
     max-width: 453px;
 
-    &-icon,
-    &-title {
+    &_1,
+    &_1_1 {
       margin-bottom: 24px;
 
       @include tablet {
@@ -56,7 +57,7 @@
       }
     }
 
-    &-title {
+    &_1_1 {
       max-width: 262px;
       font-weight: 600;
       line-height: 1.31;
@@ -68,7 +69,7 @@
       }
     }
 
-    &-desc {
+    &_1_1_1 {
       max-width: 446px;
       font-weight: 500;
       line-height: 1.62;
@@ -76,9 +77,9 @@
     }
   }
 
-  &__title,
-  &__desc,
-  &__item-title {
+  &_1_1_1_1_1,
+  &_1_1_1_1_1_1,
+  &1_1_1_1_1_1_1 {
     @include tablet {
       margin-right: auto;
       margin-left: auto;
