--- a/src/scss/components/home/team.scss
+++ b/src/scss/components/home/team.scss
@@ -1,6 +1,7 @@
 // <!--========TEAM START========  -->
 
-.team {
+/* stylelint-disable-next-line selector-class-pattern */
+.team_1 {
   padding: 80px 0 165px;
 
   @include tablet {
@@ -11,7 +12,7 @@
     padding: 80px 0;
   }
 
-  &__title {
+  &_1 {
     margin-bottom: 24px;
     max-width: 903px;
     font-weight: 600;
@@ -19,7 +20,7 @@
     color: var(--neutral-color-100);
   }
 
-  &__text {
+  &_1_1 {
     margin-bottom: 80px;
     max-width: 534px;
     font-weight: 500;
@@ -35,7 +36,7 @@
     }
   }
 
-  &__slider {
+  &_1_1_1 {
     position: relative;
     margin-bottom: 100px;
 
@@ -48,20 +49,20 @@
     }
   }
 
-  &__slide {
+  &_1_1_1_1_1 {
     max-width: 379px;
 
-    &-img {
+    &_1 {
       margin-bottom: 16px;
       width: 100%;
       height: 100%;
     }
 
-    &-head {
+    &_1_1 {
       margin-bottom: 8px;
     }
 
-    &-name {
+    &_1_1_1 {
       @include flex-justify-between;
       font-weight: 600;
       line-height: 1.5;
@@ -73,22 +74,7 @@
       }
     }
 
-    &-socials {
-      &-list {
-        @include flex-align-center;
-        gap: 8px;
-      }
-
-      &-item {
-        & svg {
-          & path {
-            fill: var(--neutral-color-100);
-          }
-        }
-      }
-    }
-
-    &-prof {
+    &_1_1_1_1_ {
       font-weight: 500;
       line-height: 1.5;
       color: var(--neutral-color-150);
@@ -173,35 +159,6 @@
       transform: rotate(360deg);
     }
   }
-
-  &__slogan {
-    @include flex-justify-between;
-    gap: 15px;
-    align-items: flex-start;
-
-    @include mini-desktop {
-      flex-direction: column;
-    }
-
-    &-title {
-      max-width: 626px;
-      font-weight: 600;
-      letter-spacing: -0.04em;
-      color: var(--neutral-color-100);
-    }
-
-    &-text {
-      max-width: 506px;
-      font-weight: 500;
-      line-height: 1.78;
-      color: var(--neutral-color-150);
-
-      @include mini-desktop {
-        align-self: flex-end;
-        max-width: 650px;
-      }
-    }
-  }
 }
-/* stylelint-disable-next-line scss/double-slash-comment-empty-line-before */
+
 // <!--========TEAM START========  -->
