Finished reviews section naming with _1, deleated avatar images

--- a/src/html/components/home/reviews.html
+++ b/src/html/components/home/reviews.html
@@ -1,20 +1,22 @@
 <!--========REVIEWS START========  -->
-<section class="reviews">
+<section class="reviews_1">
   <div class="container">
-    <div class="reviews__head">
-      <h2 class="reviews__title heading-h2">
+    <div class="reviews_1_1_1">
+      <h2 class="reviews_1_1_1_1 heading-h2" id="reviews_1_1_1_1_text">
         What our customer are saying
       </h2>
-      <p class="reviews__desc text-p-medium">
+      <p class="reviews_1_1_1_1_1 text-p-medium" id="reviews_1_1_1_1_1_text">
         We are trusted numerous companies from different business to meet their
         needs
       </p>
     </div>
-    <div class="reviews__slider-wrapper">
-      <div class="swiper reviews__slider">
-        <div class="swiper-wrapper reviews__comments">
-          <div class="swiper-slide reviews__comment">
-            <div class="reviews__rating">
+    <div class="reviews_1__slider-wrapper reviews_1_1_1_1_1_1">
+      <div class="swiper reviews_1__slider reviews_1_1_1_1_1_1_1">
+        <div class="swiper-wrapper reviews_1__comments reviews_1_1_1_1_1_1_1_1">
+          <div
+            class="swiper-slide reviews_1__comment reviews_1_1_1_1_1_1_1_1_1"
+          >
+            <div class="reviews_1__rating reviews_1_1_1_1_1_1_1_1_1_1">
               <img
                 loading="lazy"
                 width="232"
@@ -22,36 +24,46 @@
                 src="./assets/icons/rating-icon.svg"
                 alt="Five stars"
               />
-              <span class="reviews__rating-num text-p-default"> 5.0 </span>
+              <span
+                class="reviews_1__rating-num text-p-default reviews_1_1_1_1_1_1_1_1_1_1_1"
+              >
+                5.0
+              </span>
             </div>
-            <p class="reviews__comment-text heading-h3">
+            <p
+              class="reviews_1__comment-text heading-h3 reviews_1_1_1_1_1_1_1_1_1_1_1_1"
+              id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_text"
+            >
               “With Agency the results are very satisfying. Wrapped with high
               quality and innovative design that makes a surge of visitors on my
               website.”
             </p>
-            <address class="reviews__comment-author">
-              <img
-                loading="lazy"
-                class="reviews__comment-author-avatar"
-                src="./assets/image/comment-author-1.png"
-                width="56"
-                height="56"
-                alt="Renee Wells"
-              />
-              <div class="reviews__comment-author-info">
-                <p class="reviews__comments-author-name text-p-medium">
+            <address
+              class="reviews_1__comment-author reviews_1_1_1_1_1_1_1_1_1_1_1_1"
+            >
+              <div
+                class="reviews_1__comment-author-info reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+              >
+                <p
+                  class="reviews_1__comments-author-name text-p-medium reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+                  id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+                >
                   Renee Wells
                 </p>
                 <p
-                  class="reviews__comments-author-profession text-p-default"
+                  class="reviews_1__comments-author-profession text-p-default reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+                  id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
                 >
                   Product Designer, Quotient
                 </p>
               </div>
             </address>
           </div>
-          <div class="swiper-slide reviews__comment">
-            <div class="reviews__rating">
+
+          <div
+            class="swiper-slide reviews_1__comment reviews_1_1_1_1_1_1_1_1_1"
+          >
+            <div class="reviews_1__rating reviews_1_1_1_1_1_1_1_1_1_1">
               <img
                 loading="lazy"
                 width="232"
@@ -59,36 +71,46 @@
                 src="./assets/icons/rating-icon.svg"
                 alt="Five stars"
               />
-              <span class="reviews__rating-num text-p-default"> 5.0 </span>
+              <span
+                class="reviews_1__rating-num text-p-default reviews_1_1_1_1_1_1_1_1_1_1_1"
+              >
+                5.0
+              </span>
             </div>
-            <p class="reviews__comment-text heading-h3">
+            <p
+              class="reviews_1__comment-text heading-h3 reviews_1_1_1_1_1_1_1_1_1_1_1_1"
+              id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+            >
               “The service exceeded my expectations. The team delivered
               top-notch quality with great attention to detail, resulting in a
               significant increase in engagement.”
             </p>
-            <address class="reviews__comment-author">
-              <img
-                loading="lazy"
-                class="reviews__comment-author-avatar"
-                src="./assets/image/comment-author-2.jpg"
-                width="56"
-                height="56"
-                alt="John Smith"
-              />
-              <div class="reviews__comment-author-info">
-                <p class="reviews__comments-author-name text-p-medium">
+            <address
+              class="reviews_1__comment-author reviews_1_1_1_1_1_1_1_1_1_1_1_1"
+            >
+              <div
+                class="reviews_1__comment-author-info reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+              >
+                <p
+                  class="reviews_1__comments-author-name text-p-medium reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+                  id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+                >
                   John Smith
                 </p>
                 <p
-                  class="reviews__comments-author-profession text-p-default"
+                  class="reviews_1__comments-author-profession text-p-default reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+                  id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
                 >
                   Marketing Specialist, WebWorks
                 </p>
               </div>
             </address>
           </div>
-          <div class="swiper-slide reviews__comment">
-            <div class="reviews__rating">
+
+          <div
+            class="swiper-slide reviews_1__comment reviews_1_1_1_1_1_1_1_1_1"
+          >
+            <div class="reviews_1__rating reviews_1_1_1_1_1_1_1_1_1_1">
               <img
                 loading="lazy"
                 width="232"
@@ -96,28 +118,35 @@
                 src="./assets/icons/rating-icon.svg"
                 alt="Five stars"
               />
-              <span class="reviews__rating-num text-p-default"> 5.0 </span>
+              <span
+                class="reviews_1__rating-num text-p-default reviews_1_1_1_1_1_1_1_1_1_1_1"
+              >
+                5.0
+              </span>
             </div>
-            <p class="reviews__comment-text heading-h3">
+            <p
+              class="reviews_1__comment-text heading-h3 reviews_1_1_1_1_1_1_1_1_1_1_1_1"
+              id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+            >
               “Working with this agency has been a game-changer. The results
               were incredible, and they took the time to understand our vision.
               Highly recommend!”
             </p>
-            <address class="reviews__comment-author">
-              <img
-                loading="lazy"
-                class="reviews__comment-author-avatar"
-                src="./assets/image/comment-author-3.jpeg"
-                width="56"
-                height="56"
-                alt="Maria Ivanova"
-              />
-              <div class="reviews__comment-author-info">
-                <p class="reviews__comments-author-name text-p-medium">
+            <address
+              class="reviews_1__comment-author reviews_1_1_1_1_1_1_1_1_1_1_1_1"
+            >
+              <div
+                class="reviews_1__comment-author-info reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+              >
+                <p
+                  class="reviews_1__comments-author-name text-p-medium reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+                  id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+                >
                   Maria Smith
                 </p>
                 <p
-                  class="reviews__comments-author-profession text-p-default"
+                  class="reviews_1__comments-author-profession text-p-default reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+                  id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
                 >
                   UX/UI Designer, Creative Agency
                 </p>
@@ -126,8 +155,8 @@
           </div>
         </div>
       </div>
-      <div class="reviews__btns">
-        <div class="reviews__btn reviews__btn--prev">
+      <div class="reviews_1__btns">
+        <div class="reviews_1__btn reviews__btn--prev">
           <svg
             width="16"
             height="14"
@@ -143,7 +172,7 @@
             />
           </svg>
         </div>
-        <div class="reviews__btn reviews__btn--next">
+        <div class="reviews_1__btn reviews__btn--next">
           <svg
             width="16"
             height="14"
