Finished features section naming with _1 and renamed image

--- a/src/scss/components/home/features.scss
+++ b/src/scss/components/home/features.scss
@@ -1,5 +1,6 @@
 // <!--========FEATURES START========  -->
-.features {
+/* stylelint-disable-next-line selector-class-pattern */
+.features_1 {
   &__container {
     border-bottom: 1px solid var(--neutral-color-30);
     padding-top: 66px;
