--- a/src/html/components/home/features.html
+++ b/src/html/components/home/features.html
@@ -1,46 +1,84 @@
 <!--========FEATURES START========  -->
-<section class="features">
-  <div class="container features__container">
-    <ul class="features__list">
-      <li class="features__item">
-        <p class="features__item-text text-p-default">
-          <span class="features__item-num"> 17k </span>
+<section class="features_1">
+  <div class="container features_1__container features_1_1">
+    <ul class="features_1__list features_1_1_1">
+      <li class="features_1__item features_1_1_1_1">
+        <p
+          class="features_1__item-text text-p-default features_1_1_1_1_1"
+          id="features_1_1_1_1_1"
+        >
+          <span
+            class="features_1__item-num features_1_1_1_1_1_1"
+            id="features_1_1_1_1_1_1"
+          >
+            17k
+          </span>
           happy customers on worldwide
         </p>
       </li>
-      <li class="features__item">
-        <p class="features__item-text text-p-default">
-          <span class="features__item-num"> 15+ </span>
+      <li class="features_1__item features_1_1_1_1">
+        <p
+          class="features_1__item-text text-p-default features_1_1_1_1_1"
+          id="features_1_1_1_1_1_1"
+        >
+          <span
+            class="features_1__item-num features_1_1_1_1_1_1"
+            id="features_1_1_1_1_1_1_1_1"
+          >
+            15+
+          </span>
           Hours of work experience
         </p>
       </li>
-      <li class="features__item">
-        <p class="features__item-text text-p-default">
-          <span class="features__item-num"> 15+ </span>
+      <li class="features_1__item features_1_1_1_1">
+        <p
+          class="features_1__item-text text-p-default features_1_1_1_1_1"
+          id="features_1_1_1_1_1_1_1_1_1"
+        >
+          <span
+            class="features_1__item-num features_1_1_1_1_1_1"
+            id="features_1_1_1_1_1_1_1_1_1_1"
+          >
+            15+
+          </span>
           Creativity & passionate members
         </p>
       </li>
 
-      <li class="features__item">
-        <p class="features__item-text text-p-default">
-          <span class="features__item-num"> 100+ </span>
+      <li class="features_1__item features_1_1_1_1">
+        <p
+          class="features_1__item-text text-p-default features_1_1_1_1_1"
+          id="features_1_1_1_1_1_1_1_1_1_1_1"
+        >
+          <span
+            class="features_1__item-num features_1_1_1_1_1_1"
+            id="features_1_1_1_1_1_1_1_1_1_1_1_1"
+          >
+            100+
+          </span>
           Integrations lorem ipsum integrations
         </p>
       </li>
     </ul>
     <img
       loading="lazy"
-      class="features__img"
-      src="./assets/image/strenght-img.jpg"
+      class="features_1__img features_1_1_1_1_1_1_1"
+      src="./assets/image/features_1_img_1.jpg"
       width="1200"
       height="536"
       alt="Group of people"
     />
-    <div class="features__info">
-      <h2 class="features__title heading-h2">
+    <div class="features_1__info features_1_1_1_1_1_1_1_1">
+      <h2
+        class="features_1__title heading-h2 features_1_1_1_1_1_1_1_1_1"
+        id="features_1_1_1_1_1_1_1_1_1_1_1_1_1"
+      >
         Lift your business to new heights with our digital marketing services
       </h2>
-      <p class="features__desc text-p-medium">
+      <p
+        class="features_1__desc text-p-medium features_1_1_1_1_1_1_1_1_1_1"
+        id="features_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+      >
         To build software that gives customer facing teams in small and
         medium-sized businesses the ability to create rewarding and long-lasting
         relationships with customers
