Added 4th team slide

--- a/src/html/components/home/team.html
+++ b/src/html/components/home/team.html
@@ -79,6 +79,29 @@
             Chief Technology Officer
           </p>
         </div>
+        <div class="swiper-slide team_1_1_1_1_1_1">
+          <img
+            loading="lazy"
+            class="team__slide-img"
+            width="379"
+            height="434"
+            src="./assets/image/team_1_img_4.jpg"
+          />
+          <div class="team_1_1_1_1_1_1_1_1 text-p-large">
+            <div
+              class="team_1_1_1_1_1_1_1_1_1"
+              id="team_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+            >
+              Roger Dzawin
+            </div>
+          </div>
+          <p
+            class="team_1_1_1_1_1_1_1_1_1_1 text-p-medium"
+            id="team_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+          >
+            Chief Technology Officer
+          </p>
+        </div>
       </div>
       <div class="team_1__btn--prev">
         <svg
